--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -1,27 +1,33 @@
 <!-- This is the corresponding "starter code" for 04_Hello Map in Udacity and Google's Maps
 API Course, Lesson 1 -->
+<!DOCTYPE html>
+</html>
 <html>
  <head>
  <!-- styles put here, but you can include a CSS file and reference it instead! -->
-   <style type="text/css">
+   <style>
      html, body { height: 100%; margin: 0; padding: 0; }
      #map { height: 100%; }
    </style>
  </head>
  <body>
    <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <div id="map"></div>
    <script>
      // TODO: Create a map variable
-
+     var map;
      // TODO: Complete the following function to initialize the map
      function initMap() {
        // TODO: use a constructor to create a new map JS object. You can use the coordinates
        // we used, 40.7413549, -73.99802439999996 or your own!
+       map = new google.maps.Map(document.getElementById('map'), {
+         center: {lat: 40.7413549, lng: -73.9980244},
+         zoom: 13
+       });
      }
    </script>
    <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqFWaDkttf6_6tveEpt1OfWcRCz2wT_Ys&v=3&callback=initMap">
    </script>
  </body>
 </html>
