feat: window shopping key

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <a href="05_Interpreting Geocoding Responses.html">05_Interpreting Geocoding Responses.html</a>
     </li>
     <li>
-      <a href="07_Markers_Infowindows Quiz.html">07_Markers_Infowindows Quiz.html</a>
+      <a href="Project_Code_2_MakingYourMark.html">Project_Code_2_MakingYourMark.html</a>
+    </li>
+    <li>
+      <a href="Project_Code_3_WindowShoppingPart1.html">Project_Code_3_WindowShoppingPart1.html</a>
     </li>
   </ul>
 </body>
