--- a/Project_Code_3_WindowShoppingPart1.html
+++ b/Project_Code_3_WindowShoppingPart1.html
@@ -87,7 +87,7 @@
     </script>
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=MYAPIKEY&v=3&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqFWaDkttf6_6tveEpt1OfWcRCz2wT_Ys&v=3&callback=initMap">
     </script>
 
   </body>
