feat: style map

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
       <a href="05_Interpreting Geocoding Responses.html">05_Interpreting Geocoding Responses.html</a>
     </li>
     <li>
+      <a href="07_Markers_Infowindows Quiz.html">07_Markers_Infowindows Quiz.html</a>
+    </li>
+    <li>
       <a href="Project_Code_2_MakingYourMark.html">Project_Code_2_MakingYourMark.html</a>
     </li>
     <li>
       <a href="Project_Code_3_WindowShoppingPart1.html">Project_Code_3_WindowShoppingPart1.html</a>
     </li>
+    <li>
+      <a href="Project_Code_4_WindowShoppingPart2.html">Project_Code_4_WindowShoppingPart2.html</a>
+    </li>
+    <li><a href="Project_Code_5_BeingStylish.html">Project_Code_5_BeingStylish.html</a></li>
   </ul>
 </body>
 </html>
